2009-09-25 09:55  cvs

	* lib/WordPress/XMLRPC.pm, t/00_basic.t, t/02_XMLRPC.t,
	  t/04_XMLRPC_page.t, t/04_XMLRPC_post.t, t/10_XMLRPC.t.optional,
	  t/11_category.t, t/12_categories.t, t/14_options.t,
	  t/15_templates.t, t/16_tags.t, t/17_comments.t, t/test.pl: Made
	  sure some tests skip out if ENV FULLTESTING is set to 0- or if
	  t/wppost is not present.  Fixed bug in test 12.

2009-09-09 14:59  cvs

	* lib/WordPress/XMLRPC.pod: Fixed up documentation formatting.

2009-09-09 11:37  cvs

	* Makefile.PL, README, lib/WordPress/XMLRPC.pm,
	  lib/WordPress/XMLRPC.pod, t/11_category.t, t/11_category_new.t,
	  t/13_newmethods_in_new_xmlrpcversion.pl, t/14_options.t,
	  t/15_templates.t, t/16_tags.t, t/17_comments.t,
	  t/analize_xmlrpc.pl, t/wppost: Made major update, included many
	  new xml rpc calls that were not available when this module was
	  first built.	New methods:	deleteCategory deleteComment
	  editComment getComment getCommentCount    getCommentStatusList
	  getComments getOptions getPageStatusList    getPageTemplates
	  getPostStatusList getTags newComment setOptions

	  This has been updated to match the xmlrpc.php file included with;
	  wordpress v 2.8.4

2009-08-29 19:04  cvs

	* Makefile.PL, README, lib/WordPress/XMLRPC.pm: Made sure that
	  perl/gpl license shows up properly.

2008-07-28 17:25  cvs

	* lib/WordPress/XMLRPC.pm, t/12_categories.t: added getCategory(),
	  this was philosophically hard.. because there was no getCategory
	  method in xmlrpc.php ... but it is very useful.

2008-07-28 09:31  cvs

	* lib/WordPress/XMLRPC.pm, t/11_category_new.t: Fixed newCategory
	  It was suggesting argument is string but it should have  been
	  hash ref, now checks that the hash ref contains at least 'name'
	  key.

2008-06-25 11:19  cvs

	* Changes, MANIFEST: added changefile

2008-06-25 11:18  cvs

	* lib/WordPress/XMLRPC.pm: Added extra argument checking, now if
	  you pass a scalar or hash instead of a hash ref when needed, we