@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               WordPress-XMLRPC
-version:            1.21
+version:            1.22
 abstract:           api to wordpress xml rpc calls
 author:
     - Leo Charre leocharre at cpan dot org
 license:            perl
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     LEOCHARRE::CLI2:   0
@@ -19,7 +21,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
